Added AO Support.

--- a/MPE/ParallaxTerrain_Continued.cfg
+++ b/MPE/ParallaxTerrain_Continued.cfg
@@ -29,7 +29,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.100000001,0.100000001,0.100000001,1
 			_FresnelPower = 3
-			_BumpScale = 2.5
+			_BumpScale = 1.75
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
@@ -99,13 +99,13 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_DisplacementScale = 0.129999995
 			_DisplacementOffset = 0.0299999993
 			_SpecularIntensity = 0.699999988
-			_SpecularPower = 20
-			_EnvironmentMapFactor = 0.5
+			_SpecularPower = 60
+			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.349999994
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 			_FresnelPower = 4
-			_BumpScale = 1
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = 7250
 			_LowMidBlendEnd = 7500
@@ -130,19 +130,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/GravelSandy_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/GravelSandy_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/GravelSandy_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/LintMikey_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
 			_DisplacementScale = 0.0399999991
 			_DisplacementOffset = 0
 			_SpecularIntensity = 0.100000001
-			_SpecularPower = 32
+			_SpecularPower = 90
 			_EnvironmentMapFactor = 0.5
 			_Hapke = 0.200000003
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.100000001,0.100000001,0.100000001,1
 			_FresnelPower = 3
-			_BumpScale = 1
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
@@ -167,19 +168,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/ThatmoSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/CrokslevDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/Regolith_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Crokslev_AO.dds
 			_SteepPower = 4
 			_SteepContrast = 1.5
 			_SteepMidpoint = 0.731000006
 			_DisplacementScale = 0.0700000003
 			_DisplacementOffset = 0.0109999999
-			_SpecularIntensity = 1
-			_SpecularPower = 134
-			_EnvironmentMapFactor = 0.5
+			_SpecularIntensity = 0.5
+			_SpecularPower = 60
+			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.430000007
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 3
-			_BumpScale = 1
+			_FresnelPower = 5
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10000
 			_LowMidBlendEnd = -10001
@@ -204,6 +206,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/SnowFluffy_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/SnowFluffy_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/SnowFluffy_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Geito_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -241,6 +244,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/IceRough_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/IceRough_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/NoInfluence_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Havous_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -278,6 +282,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/Regolith_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/Regolith_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/Regolith_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/vant_ao.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -315,6 +320,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/Tholins_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/Tholins_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/Tholins_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/KiKi_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -352,6 +358,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/IceRough_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/MracksisDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/MracksisInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Mracksis_AO.dds
 			_SteepPower = 4
 			_SteepContrast = 3
 			_SteepMidpoint = 0.699999988
@@ -389,6 +396,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/SnowFluffy_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/SnowFluffy_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/SnowFluffy_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Geito_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -426,6 +434,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/SlateSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/ErvoDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/ErvoInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Ervo_AO.dds
 			_SteepPower = 5
 			_SteepContrast = 4
 			_SteepMidpoint = 0.670000017
@@ -463,6 +472,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/RockLight_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/ArchaeDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/NoInfluence_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Archae_AO.dds
 			_SteepPower = 3
 			_SteepContrast = 1
 			_SteepMidpoint = 0.731000006
@@ -500,6 +510,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/PlockSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/SodenDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/SodenInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Soden_AO.dds
 			_SteepPower = 3
 			_SteepContrast = 1.20000005
 			_SteepMidpoint = 0.620000005
@@ -537,6 +548,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_BumpMapSteep = OuterParallax/Textures/IceRough_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/IceRough_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/NoInfluence_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Havous_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
