Cleaned up MPE Scatter Spawns.

--- a/MPE/ParallaxTerrain_Continued.cfg
+++ b/MPE/ParallaxTerrain_Continued.cfg
@@ -60,20 +60,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.5
 			_DisplacementScale = 0.0500000007
 			_DisplacementOffset = 0
-			_SpecularIntensity = 0.6
-			_SpecularPower = 60
-			_EnvironmentMapFactor = 0.1
+			_SpecularIntensity = 0.4
+			_SpecularPower = 100
+			_EnvironmentMapFactor = 0.3
 			_Hapke = 0.430000007
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 5
-			_BumpScale = 2.5
+			_FresnelPower = 6
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -80
 			_LowMidBlendEnd = -79
 			_MidHighBlendStart = -69
 			_MidHighBlendEnd = -68
-			_Tiling = 0.0666666701
+			_Tiling = 0.05
 		}
 	}
 	Body
@@ -98,7 +98,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.75
 			_DisplacementScale = 0.129999995
 			_DisplacementOffset = 0.0299999993
-			_SpecularIntensity = 0.699999988
+			_SpecularIntensity = 0.1
 			_SpecularPower = 60
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.349999994
@@ -210,22 +210,22 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
-			_DisplacementScale = 0.0450000018
+			_DisplacementScale = 0.03
 			_DisplacementOffset = 0
-			_SpecularIntensity = 4
-			_SpecularPower = 135
-			_EnvironmentMapFactor = 0.5
-			_Hapke = 0.430000007
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.349999994,0.349999994,0.349999994,1
-			_FresnelPower = 8
-			_BumpScale = 1
+			_SpecularIntensity = 1.0
+			_SpecularPower = 100
+			_EnvironmentMapFactor = 0.3
+			_Hapke = 0.4
+			_EmissionColor = 0.1,0.1,0.1,1
+			_FresnelColor = 0.3,0.3,0.3,1
+			_FresnelPower = 6
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10001
 			_LowMidBlendEnd = -10000
 			_MidHighBlendStart = 10000
 			_MidHighBlendEnd = 10001
-			_Tiling = 0.0666666701
+			_Tiling = 0.05
 		}
 	}
 	Body
@@ -371,7 +371,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_EmissionColor = 0,0,0,1
 			_FresnelColor = 0.100000001,0.100000001,0.100000001,1
 			_FresnelPower = 3
-			_BumpScale = 1
+			_BumpScale = 2
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
@@ -402,20 +402,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.5
 			_DisplacementScale = 0.0450000018
 			_DisplacementOffset = 0
-			_SpecularIntensity = 4.5
-			_SpecularPower = 40
-			_EnvironmentMapFactor = 0.5
+			_SpecularIntensity = 1.0
+			_SpecularPower = 100
+			_EnvironmentMapFactor = 0.3
 			_Hapke = 0.430000007
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.349999994,0.349999994,0.349999994,1
-			_FresnelPower = 8
-			_BumpScale = 1
+			_EmissionColor = 0.1,0.1,0.1,1
+			_FresnelColor = 0.3,0.3,0.3,1
+			_FresnelPower = 6
+			_BumpScale = 1.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10001
 			_LowMidBlendEnd = -10000
 			_MidHighBlendStart = 10000
 			_MidHighBlendEnd = 10001
-			_Tiling = 0.0666666701
+			_Tiling = 0.05
 		}
 	}
 	Body
@@ -440,7 +440,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.670000017
 			_DisplacementScale = 0.0900000036
 			_DisplacementOffset = 0.0199999996
-			_SpecularIntensity = 1
+			_SpecularIntensity = 0.3
 			_SpecularPower = 232
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.800000008
@@ -514,22 +514,22 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepPower = 3
 			_SteepContrast = 1.20000005
 			_SteepMidpoint = 0.620000005
-			_DisplacementScale = 0.0500000007
+			_DisplacementScale = 0.03
 			_DisplacementOffset = 0.00999999978
-			_SpecularIntensity = 0.699999988
-			_SpecularPower = 15
-			_EnvironmentMapFactor = 0.5
+			_SpecularIntensity = 1
+			_SpecularPower = 100
+			_EnvironmentMapFactor = 0.3
 			_Hapke = 0.699999988
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 3
-			_BumpScale = 1
+			_EmissionColor = 0.1,0.1,0.1,1
+			_FresnelColor = 0.3,0.3,0.3,1
+			_FresnelPower = 6
+			_BumpScale = 2
 			_RefractionIntensity = 0
 			_LowMidBlendStart = 0
 			_LowMidBlendEnd = 1
 			_MidHighBlendStart = 2800
 			_MidHighBlendEnd = 3000
-			_Tiling = 0.0666666701
+			_Tiling = 0.05
 		}
 	}
 	Body
@@ -552,22 +552,22 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
-			_DisplacementScale = 0.0450000018
+			_DisplacementScale = 0.06
 			_DisplacementOffset = 0
-			_SpecularIntensity = 0.150000006
-			_SpecularPower = 15
-			_EnvironmentMapFactor = 0.5
+			_SpecularIntensity = 2.5
+			_SpecularPower = 50
+			_EnvironmentMapFactor = 0.8
 			_Hapke = 0.550000012
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 3
-			_BumpScale = 1
+			_EmissionColor = 0.1,0.1,0.15,1
+			_FresnelColor = 0.4,0.4,0.4,1
+			_FresnelPower = 5
+			_BumpScale = 2
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -500
 			_LowMidBlendEnd = -499
 			_MidHighBlendStart = -498
 			_MidHighBlendEnd = -497
-			_Tiling = 0.0666666701
+			_Tiling = 0.05
 		}
 	}
 }
