--- a/MPE/_Scatters/Configs_C/Edas.cfg
+++ b/MPE/_Scatters/Configs_C/Edas.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Edas // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Edas
 		configVersion = 2
 		Scatter
 		{
@@ -49,10 +49,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 0
+				seed = 0.3
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 17
+				range = 150
+				populationMultiplier = 21
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -135,10 +135,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 3
+				seed = 3.3
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 5
+				range = 650
+				populationMultiplier = 7
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
