--- a/MPE/_Scatters/Configs_C/Ervo.cfg
+++ b/MPE/_Scatters/Configs_C/Ervo.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Ervo // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Ervo
 		configVersion = 2
 		Scatter
 		{
@@ -51,7 +51,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 54
 				spawnChance = 1
-				range = 140
+				range = 150
 				populationMultiplier = 4
 				minScale = 2,2,2
 				maxScale = 4,4,4
@@ -221,10 +221,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 0
+				seed = 0.3
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 5
+				range = 150
+				populationMultiplier = 65
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -311,8 +311,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 1
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 3
+				range = 150
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -397,8 +397,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 1
+				range = 650
+				populationMultiplier = 5
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -485,7 +485,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 4
 				spawnChance = 0.5
-				range = 400
+				range = 650
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -572,7 +572,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 5
 				spawnChance = 0.300000012
 				range = 900
-				populationMultiplier = 1
+				populationMultiplier = 3
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
