--- a/MPE/_Scatters/Configs_C/Geito.cfg
+++ b/MPE/_Scatters/Configs_C/Geito.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Geito // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Geito
 		configVersion = 2
 		Scatter
 		{
@@ -53,7 +53,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 0
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 12
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -63,8 +63,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -73,7 +73,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
-						range = 15
+						range = 25
 						MaterialOverride
 						{
 						}
@@ -81,14 +81,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
-						range = 30
+						range = 50
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -141,7 +138,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 1
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -151,8 +148,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -161,7 +158,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
-						range = 15
+						range = 25
 						MaterialOverride
 						{
 						}
@@ -169,14 +166,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
-						range = 30
+						range = 50
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -229,7 +223,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 1
-				range = 300
+				range = 650
 				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -239,8 +233,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -249,7 +243,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 20
+						range = 60
 						MaterialOverride
 						{
 						}
@@ -257,14 +251,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 40
+						range = 120
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -327,8 +318,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -350,9 +341,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -415,8 +403,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -438,9 +426,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -503,8 +488,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.129999995
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -512,23 +497,20 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod1
+						range = 150
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -591,8 +573,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.400000006
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -614,9 +596,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -679,8 +658,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.400000006
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -702,9 +681,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -767,8 +743,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepContrast = 3
 				steepMidpoint = 0.699999988
 				maxNormalDeviance = 0.400000006
-				minAltitude = -1000
-				maxAltitude = 10000
+				minAltitude = -50000
+				maxAltitude = 50000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -790,9 +766,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
