--- a/MPE/_Scatters/Configs_C/Havous.cfg
+++ b/MPE/_Scatters/Configs_C/Havous.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Havous // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Havous
 		configVersion = 2
 		Scatter
 		{
@@ -51,7 +51,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 1.21300006
 				spawnChance = 1
-				range = 50
+				range = 150
 				populationMultiplier = 100
 				minScale = 0.0199999996,0.0199999996,0.0199999996
 				maxScale = 0.0299999993,0.0299999993,0.0299999993
@@ -674,7 +674,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 1.21300006
 				spawnChance = 1
-				range = 50
+				range = 150
 				populationMultiplier = 100
 				minScale = 0.0199999996,0.0199999996,0.0199999996
 				maxScale = 0.0299999993,0.0299999993,0.0299999993
@@ -862,7 +862,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 12
 				spawnChance = 1
-				range = 550
+				range = 650
 				populationMultiplier = 7
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -956,7 +956,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 15
 				spawnChance = 1
-				range = 1400
+				range = 1600
 				populationMultiplier = 2
 				minScale = 0.0900000036,0.0900000036,0.0900000036
 				maxScale = 0.300000012,0.300000012,0.300000012
