--- a/MPE/_Scatters/Configs_C/Kal.cfg
+++ b/MPE/_Scatters/Configs_C/Kal.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Kal // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Kal
 		configVersion = 2
 		Scatter
 		{
@@ -49,10 +49,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 0
-				spawnChance = 1
-				range = 100
-				populationMultiplier = 9
+				seed = 0.3
+				spawnChance = 0.9
+				range = 150
+				populationMultiplier = 5
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -136,9 +136,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 1
-				range = 100
-				populationMultiplier = 8
+				spawnChance = 0.9
+				range = 150
+				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -221,9 +221,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 3
-				spawnChance = 1
-				range = 300
+				seed = 2.8
+				spawnChance = 0.45
+				range = 650
 				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
@@ -482,7 +482,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 8
 				spawnChance = 0.4
 				range = 2000
-				populationMultiplier = 12
+				populationMultiplier = 4
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
 				scaleRandomness = 0.5
