--- a/MPE/_Scatters/Configs_C/Lon.cfg
+++ b/MPE/_Scatters/Configs_C/Lon.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Lon // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Lon
 		configVersion = 2
 		Scatter
 		{
@@ -49,10 +49,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 0
+				seed = 0.3
 				spawnChance = 0.75
-				range = 100
-				populationMultiplier = 8
+				range = 150
+				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -60,7 +60,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -135,10 +135,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 1
+				seed = 0.99
 				spawnChance = 0.75
-				range = 100
-				populationMultiplier = 8
+				range = 150
+				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -146,7 +146,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -222,9 +222,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 4
-				spawnChance = 0.75
-				range = 300
-				populationMultiplier = 2
+				spawnChance = 0.5
+				range = 650
+				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -232,7 +232,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -307,10 +307,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 5
-				spawnChance = 0.75
+				seed = 5.2
+				spawnChance = 0.5
 				range = 900
-				populationMultiplier = 3
+				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -318,7 +318,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -396,7 +396,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 4
 				spawnChance = 0.75
 				range = 2000
-				populationMultiplier = 2
+				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
 				scaleRandomness = 0.5
@@ -404,7 +404,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -479,8 +479,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 4
-				spawnChance = 0.75
+				seed = 4.8
+				spawnChance = 0.5
 				range = 2000
 				populationMultiplier = 2
 				minScale = 0.4,0.4,0.4
@@ -490,7 +490,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -568,7 +568,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 10
 				spawnChance = 0.3
 				range = 2000
-				populationMultiplier = 2
+				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
 				scaleRandomness = 0.5
@@ -576,7 +576,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.001
 				steepContrast = 4.5
 				steepMidpoint = 0.7
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
