--- a/MPE/_Scatters/Configs_C/Soden.cfg
+++ b/MPE/_Scatters/Configs_C/Soden.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Soden // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Soden
 		configVersion = 2
 		Scatter
 		{
@@ -60,7 +60,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 3000
 				altitudeFadeRange = 10
@@ -137,7 +137,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 0.08
-				range = 1100
+				range = 1650
 				populationMultiplier = 1
 				minScale = 1.25,1.25,1.25
 				maxScale = 1.5,1.5,1.5
@@ -146,7 +146,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 3000
 				altitudeFadeRange = 10
@@ -232,7 +232,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 3000
 				altitudeFadeRange = 10
@@ -318,7 +318,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 3000
 				altitudeFadeRange = 10
@@ -404,7 +404,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 3000
 				altitudeFadeRange = 10
@@ -490,7 +490,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = 2900
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -576,7 +576,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = 2900
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -662,7 +662,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = 2900
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -748,7 +748,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = 2900
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -834,7 +834,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = 2900
 				maxAltitude = 999999
 				altitudeFadeRange = 10
