--- a/MPE/_Scatters/Configs_C/Vant.cfg
+++ b/MPE/_Scatters/Configs_C/Vant.cfg
@@ -50,9 +50,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 14
-				spawnChance = 0.9
-				range = 100
-				populationMultiplier = 70
+				spawnChance = 1
+				range = 150
+				populationMultiplier = 120
 				minScale = 0.1,0.1,0.1
 				maxScale = 0.2,0.2,0.2
 				scaleRandomness = 0.5
@@ -60,7 +60,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -136,9 +136,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.9
-				range = 100
-				populationMultiplier = 68
+				spawnChance = 1
+				range = 150
+				populationMultiplier = 120
 				minScale = 0.1,0.1,0.1
 				maxScale = 0.2,0.2,0.2
 				scaleRandomness = 0.5
@@ -146,7 +146,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -221,10 +221,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 9
-				spawnChance = 0.7
-				range = 300
-				populationMultiplier = 32
+				seed = 9.997
+				spawnChance = 0.8
+				range = 650
+				populationMultiplier = 40
 				minScale = 0.125,0.125,0.125
 				maxScale = 0.175,0.175,0.175
 				scaleRandomness = 0.5
@@ -232,7 +232,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -307,10 +307,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 5
+				seed = 5.3
 				spawnChance = 1
 				range = 900
-				populationMultiplier = 4
+				populationMultiplier = 14
 				minScale = 0.1,0.1,0.1
 				maxScale = 0.15,0.15,0.15
 				scaleRandomness = 0.5
@@ -318,7 +318,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -337,6 +337,92 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Mun/clustermed3
+						range = 120
+						MaterialOverride
+						{
+						}
+					}
+				}
+				BiomeBlacklist
+				{
+				}
+			}
+		}
+		Scatter
+		{
+			name = LargeRocks
+			model = Parallax_StockScatterTextures/Models/Mun/clusterlarge
+			collisionLevel = 2
+			Optimizations
+			{
+				frustumCullingStartRange = 50
+				frustumCullingScreenMargin = -40
+				maxObjects = 10000
+			}
+			SubdivisionSettings
+			{
+				subdivisionRangeMode = noSubdivision
+			}
+			DistributionNoise
+			{
+				noiseType = simplexPerlin
+				inverted = False
+				frequency = 100
+				octaves = 6
+				lacunarity = 2
+				seed = 1
+			}
+			Material
+			{
+				shader = Custom/ParallaxInstancedSolid
+				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
+				_SpecularIntensity = 0.0600000024
+				_SpecularPower = 15
+				_NormalSpecularInfluence = 1
+				_Hapke = 0.43
+				_BumpScale = 1
+				_FresnelPower = 3
+				_EnvironmentMapFactor = 1
+				_Color = 1.2,1.2,1.2,1
+				_FresnelColor = 0.15,0.15,0.15,1
+				_CullMode = 2
+				Keywords
+				{
+				}
+			}
+			Distribution
+			{
+				seed = 5.3
+				spawnChance = 1
+				range = 1650
+				populationMultiplier = 14
+				minScale = 0.1,0.1,0.1
+				maxScale = 0.15,0.15,0.15
+				scaleRandomness = 0.5
+				cutoffScale = 0.3
+				steepPower = 3
+				steepContrast = 4.5
+				steepMidpoint = 0.731
+				maxNormalDeviance = 0.3
+				minAltitude = -1000
+				maxAltitude = 999999
+				altitudeFadeRange = 10
+				alignToTerrainNormal = True
+				coloredByTerrain = False
+				LODs
+				{
+					LOD
+					{
+						model = Parallax_StockScatterTextures/Models/Mun/clusterlarge2
+						range = 60
+						MaterialOverride
+						{
+						}
+					}
+					LOD
+					{
+						model = Parallax_StockScatterTextures/Models/Mun/clusterlarge3
 						range = 120
 						MaterialOverride
 						{
