--- a/MPE/_Scatters/Configs_C/Flake.cfg
+++ b/MPE/_Scatters/Configs_C/Flake.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 {
 	Body
 	{
-		name = Flake // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Flake
 		configVersion = 2
 		Scatter
 		{
@@ -53,7 +53,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 0
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 5
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -141,7 +141,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 1
-				range = 300
+				range = 650
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -277,7 +277,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxObjects = 1000
 			}
 			SubdivisionSettings
 			{
@@ -316,7 +316,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.03
+				spawnChance = 0.02
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.75,0.75,0.75
@@ -336,16 +336,16 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod1
+						range = 150
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
-						range = 240
+						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod2
+						range = 300
 						MaterialOverride
 						{
 						}
@@ -489,7 +489,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 0.05
-				range = 1100
+				range = 1650
 				populationMultiplier = 1
 				minScale = 1,1,1
 				maxScale = 1,1,1
@@ -575,7 +575,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 5
 				spawnChance = 0.05
-				range = 1500
+				range = 1650
 				populationMultiplier = 1
 				minScale = 1,1,1
 				maxScale = 1,1,1
@@ -833,7 +833,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 54
 				spawnChance = 1
-				range = 140
+				range = 150
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 0.5,0.5,0.5
