--- a/MPE/_Scatters/Configs_C/Mracksis.cfg
+++ b/MPE/_Scatters/Configs_C/Mracksis.cfg
@@ -51,10 +51,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 0
+				seed = 0.3
 				spawnChance = 1
 				range = 150
-				populationMultiplier = 2
+				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -93,8 +93,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -145,12 +143,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 1
+				seed = 1.3
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 2
+				range = 150
+				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
-				maxScale = 0.200000003,0.200000003,0.200000003
+				maxScale = 0.25,0.25,0.25
 				scaleRandomness = 0.5
 				cutoffScale = 0.00999999978
 				steepPower = 8
@@ -187,8 +185,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -239,10 +235,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 3
+				seed = 3.57
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 1
+				range = 650
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -281,8 +277,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -333,12 +327,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 4
+				seed = 4.3
 				spawnChance = 0.5
-				range = 300
-				populationMultiplier = 1
-				minScale = 0.100000001,0.100000001,0.100000001
-				maxScale = 0.200000003,0.200000003,0.200000003
+				range = 650
+				populationMultiplier = 2
+				minScale = 0.125,0.125,0.125
+				maxScale = 0.25,0.25,0.25
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
 				steepPower = 8
@@ -375,8 +369,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -430,7 +422,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 7
 				spawnChance = 0.05
 				range = 2000
-				populationMultiplier = 1
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
@@ -469,8 +461,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -524,7 +514,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 8
 				spawnChance = 0.05
 				range = 2000
-				populationMultiplier = 1
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.300000012,0.300000012,0.300000012
 				scaleRandomness = 0.5
@@ -563,8 +553,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -616,8 +604,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 0
-				spawnChance = 0.05
-				range = 600
+				spawnChance = 0.075
+				range = 1650
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 0.400000006,0.400000006,0.400000006
@@ -657,8 +645,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -711,7 +697,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 0
 				spawnChance = 0.02
-				range = 600
+				range = 650
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 10.400000006,10.400000006,10.400000006
@@ -751,8 +737,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 					name = LesserMare
 					name = Planitia
 					name = TholinField
-					name = VallesParvus
-					name = Poles
 				}
 			}
 		}
@@ -891,8 +875,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 1
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 2
+				range = 150
+				populationMultiplier = 8
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -979,8 +963,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 3
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 2
+				range = 650
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -1065,10 +1049,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 4
-				spawnChance = 0.5
-				range = 400
-				populationMultiplier = 2
+				seed = 4.5
+				spawnChance = 1
+				range = 650
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -1153,8 +1137,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 7
-				spawnChance = 0.05
+				seed = 7.3
+				spawnChance = 0.2
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -1242,7 +1226,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 8
-				spawnChance = 0.05
+				spawnChance = 0.4
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -1331,7 +1315,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 0
 				spawnChance = 0.5
-				range = 600
+				range = 1650
 				populationMultiplier = 1
 				minScale = 0.0900000036,0.0900000036,0.0900000036
 				maxScale = 0.300000012,0.300000012,0.300000012
@@ -1418,8 +1402,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 0
-				spawnChance = 0.05
-				range = 600
+				spawnChance = 0.15
+				range = 1650
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 0.400000006,0.400000006,0.400000006
@@ -1509,7 +1493,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			{
 				seed = 0
 				spawnChance = 0.02
-				range = 600
+				range = 1250
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 10.400000006,10.400000006,10.400000006
